--- a/Restaurant2/Restaurant2.csproj
+++ b/Restaurant2/Restaurant2.csproj
@@ -46,14 +46,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="Busboy.cs" />
+    <Compile Include="BusboyForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="BusboyForm.Designer.cs">
+      <DependentUpon>BusboyForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Cook.cs" />
+    <Compile Include="CookForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CookForm.Designer.cs">
+      <DependentUpon>CookForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Customer.cs" />
+    <Compile Include="Database.cs" />
+    <Compile Include="Employee.cs" />
+    <Compile Include="FloorPlan.cs" />
+    <Compile Include="HostForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="HostForm.Designer.cs">
+      <DependentUpon>HostForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LogInForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LogInForm.Designer.cs">
+      <DependentUpon>LogInForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Host.cs" />
+    <Compile Include="Manager.cs" />
+    <Compile Include="ManagerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ManagerForm.Designer.cs">
+      <DependentUpon>ManagerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Waiter.cs" />
+    <Compile Include="WaiterForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaiterForm.Designer.cs">
+      <DependentUpon>WaiterForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -72,6 +111,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="RestaurantClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
