--- a/Restaurant2/Restaurant2.csproj
+++ b/Restaurant2/Restaurant2.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -98,6 +99,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SecureLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SecureLogin.Designer.cs">
+      <DependentUpon>SecureLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Waiter.cs" />
     <Compile Include="WaiterForm.cs">
       <SubType>Form</SubType>
@@ -132,6 +139,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SecureLogin.resx">
+      <DependentUpon>SecureLogin.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="WaiterForm.resx">
       <DependentUpon>WaiterForm.cs</DependentUpon>
     </EmbeddedResource>
