Added a refresh button to the BusboyForm and the UI logic necessary to make it work.

--- a/Restaurant2/Restaurant2.csproj
+++ b/Restaurant2/Restaurant2.csproj
@@ -112,6 +112,9 @@
     <Compile Include="WaiterForm.Designer.cs">
       <DependentUpon>WaiterForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="BusboyForm.resx">
+      <DependentUpon>BusboyForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CookForm.resx">
       <DependentUpon>CookForm.cs</DependentUpon>
     </EmbeddedResource>
