--- a/Restaurant2/Restaurant2.csproj
+++ b/Restaurant2/Restaurant2.csproj
@@ -112,6 +112,12 @@
     <Compile Include="WaiterForm.Designer.cs">
       <DependentUpon>WaiterForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="WaiterMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaiterMenu.Designer.cs">
+      <DependentUpon>WaiterMenu.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BusboyForm.resx">
       <DependentUpon>BusboyForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="WaiterForm.resx">
       <DependentUpon>WaiterForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WaiterMenu.resx">
+      <DependentUpon>WaiterMenu.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
