--- a/Restaurant2/Restaurant2.csproj
+++ b/Restaurant2/Restaurant2.csproj
@@ -116,6 +116,18 @@
     <Compile Include="WaiterMenu.Designer.cs">
       <DependentUpon>WaiterMenu.cs</DependentUpon>
     </Compile>
+    <Compile Include="WaiterOrderPayment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaiterOrderPayment.Designer.cs">
+      <DependentUpon>WaiterOrderPayment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="WaiterOrderReady.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="WaiterOrderReady.Designer.cs">
+      <DependentUpon>WaiterOrderReady.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BusboyForm.resx">
       <DependentUpon>BusboyForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -154,6 +166,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="WaiterMenu.resx">
       <DependentUpon>WaiterMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WaiterOrderPayment.resx">
+      <DependentUpon>WaiterOrderPayment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="WaiterOrderReady.resx">
+      <DependentUpon>WaiterOrderReady.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
