--- a/Restaurant2/App.config
+++ b/Restaurant2/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Restaurant2.Properties.Settings.ConnectionString"
+            connectionString="Data Source=cis1.actx.edu;User ID=db2;Password=db20"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
